--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
 <body>
     <!-- 상단 바로가기 링크 -->
     <div class="header">
-        <a href="http://www.kimsmom.site/" class="site-link" target="_blank">사이트 바로가기</a>
+        <a href="https://tonyhwang1004.github.io/vocabooster/" class="site-link" target="_blank">사이트 바로가기</a>
     </div>
 
     <!-- 제목 및 설명 섹션 -->
